--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,12 @@
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/rentcar
+    username: root
+    password: Nccai1180
+    driver-class-name: com.mysql.cj.jdbc.Driver
